--- a/model_training/ML_Project_2.ipynb
+++ b/model_training/ML_Project_2.ipynb
@@ -2050,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 306,
+   "execution_count": 1,
    "id": "65aff552-65ab-4e75-aa0b-225b4e0b7dcc",
    "metadata": {},
    "outputs": [],
@@ -2081,7 +2081,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 309,
+   "execution_count": 4,
    "id": "a03ac9d8-5388-42e5-9fd8-8788276b3c15",
    "metadata": {},
    "outputs": [],
@@ -2106,7 +2106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 312,
+   "execution_count": 7,
    "id": "5dd4eef1-b26d-420a-8457-de48e53d1e39",
    "metadata": {},
    "outputs": [],
@@ -2129,7 +2129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 315,
+   "execution_count": 10,
    "id": "eced0b5f-a522-4cd9-b0f1-c4c73a6f6a90",
    "metadata": {},
    "outputs": [],
@@ -2156,7 +2156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 318,
+   "execution_count": 13,
    "id": "1b71222a-45f2-46d8-8106-a47039511aa2",
    "metadata": {},
    "outputs": [
@@ -2205,7 +2205,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 321,
+   "execution_count": 16,
    "id": "8a2a84dc-8456-49d9-845a-112f2f9edfeb",
    "metadata": {},
    "outputs": [],
@@ -2226,7 +2226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 324,
+   "execution_count": 19,
    "id": "182636b4-dce5-4dde-8e01-6c13cdde0e65",
    "metadata": {},
    "outputs": [],
@@ -2245,7 +2245,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 327,
+   "execution_count": 22,
    "id": "b531c49f-2a36-499e-a91b-6304bd391e65",
    "metadata": {},
    "outputs": [],
@@ -2265,7 +2265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 25,
    "id": "9571abd5-fcd2-412a-939c-e00a057a2040",
    "metadata": {},
    "outputs": [
@@ -2274,7 +2274,23 @@
      "output_type": "stream",
      "text": [
       "Gradient Boosting Accuracy: 65.84%, F1-Score: 0.66\n",
-      "Random Forest Accuracy: 59.23%, F1-Score: 0.60\n",
+      "Random Forest Accuracy: 59.23%, F1-Score: 0.60\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\sowow\\anaconda3\\Lib\\site-packages\\xgboost\\core.py:158: UserWarning: [20:14:01] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0ed59c031377d09b8-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "Parameters: { \"use_label_encoder\" } are not used.\n",
+      "\n",
+      "  warnings.warn(smsg, UserWarning)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "XGBoost Accuracy: 64.89%, F1-Score: 0.65\n",
       "Decision Tree Accuracy: 51.30%, F1-Score: 0.48\n",
       "\n",
