models compressed for memory space

--- a/model_training/ML_Project_2.ipynb
+++ b/model_training/ML_Project_2.ipynb
@@ -2265,7 +2265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 67,
    "id": "9571abd5-fcd2-412a-939c-e00a057a2040",
    "metadata": {},
    "outputs": [
@@ -2273,15 +2273,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Gradient Boosting Accuracy: 65.84%, F1-Score: 0.66\n",
-      "Random Forest Accuracy: 59.23%, F1-Score: 0.60\n"
+      "Gradient Boosting Accuracy: 64.98%, F1-Score: 0.65\n",
+      "Random Forest Accuracy: 58.70%, F1-Score: 0.59\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\sowow\\anaconda3\\Lib\\site-packages\\xgboost\\core.py:158: UserWarning: [20:52:57] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0ed59c031377d09b8-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
+      "C:\\Users\\sowow\\anaconda3\\Lib\\site-packages\\xgboost\\core.py:158: UserWarning: [21:47:15] WARNING: C:\\buildkite-agent\\builds\\buildkite-windows-cpu-autoscaling-group-i-0ed59c031377d09b8-1\\xgboost\\xgboost-ci-windows\\src\\learner.cc:740: \n",
       "Parameters: { \"use_label_encoder\" } are not used.\n",
       "\n",
       "  warnings.warn(smsg, UserWarning)\n"
@@ -2291,19 +2291,19 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "XGBoost Accuracy: 64.89%, F1-Score: 0.65\n",
+      "XGBoost Accuracy: 63.78%, F1-Score: 0.64\n",
       "Decision Tree Accuracy: 51.30%, F1-Score: 0.48\n",
       "\n",
-      "Best model selected: Gradient Boosting with accuracy 65.84%\n"
+      "Best model selected: Gradient Boosting with accuracy 64.98%\n"
      ]
     }
    ],
    "source": [
     "# Train and Evaluate Models\n",
     "models = {\n",
-    "    \"Gradient Boosting\": GradientBoostingClassifier(n_estimators=400, learning_rate=0.02, max_depth=10, subsample=0.85, random_state=42),\n",
-    "    \"Random Forest\": RandomForestClassifier(n_estimators= 400, max_depth=10, random_state=42),\n",
-    "    \"XGBoost\": XGBClassifier(n_estimators=400, learning_rate=0.02, max_depth=10, subsample=0.85, colsample_bytree=0.8, random_state=42, use_label_encoder=False, eval_metric='logloss'),\n",
+    "    \"Gradient Boosting\": GradientBoostingClassifier(n_estimators=300, learning_rate=0.02, max_depth=10, subsample=0.85, random_state=42),\n",
+    "    \"Random Forest\": RandomForestClassifier(n_estimators= 300, max_depth=10, random_state=42),\n",
+    "    \"XGBoost\": XGBClassifier(n_estimators=300, learning_rate=0.02, max_depth=10, subsample=0.85, colsample_bytree=0.8, random_state=42, use_label_encoder=False, eval_metric='logloss'),\n",
     "    \"Decision Tree\": DecisionTreeClassifier(max_depth=15, random_state=42)\n",
     "}\n",
     "\n",
@@ -2335,7 +2335,104 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
+   "id": "72a41bc6-b3fc-4eec-9890-cd7d540c9a81",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9766ea3-0119-4629-a7e2-d32ac63b8e21",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d652fd74-1afe-47a9-a164-d7937364b76b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "54930336-e21b-4d01-a8d5-566674eb3dcb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Compressed model and features saved for web integration.\n",
+      "Compressed model file size: 9.06 MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Save the Best Model and Feature List\n",
+    "model_path = \"../web_integration/backend/model/model.pkl\"\n",
+    "compressed_model_path = \"../web_integration/backend/model/compressed_model.pkl\"\n",
+    "features_list_path = \"../web_integration/backend/model/features_list.pkl\"\n",
+    "\n",
+    "# Save the uncompressed model first (if needed later)\n",
+    "with open(model_path, \"wb\") as f:\n",
+    "    pickle.dump(best_model, f)\n",
+    "\n",
+    "# Compress the model\n",
+    "import joblib\n",
+    "joblib.dump(best_model, compressed_model_path, compress=3)\n",
+    "\n",
+    "# Save the features list\n",
+    "with open(features_list_path, \"wb\") as f:\n",
+    "    pickle.dump(X_balanced.columns.tolist(), f)\n",
+    "\n",
+    "print(f\"Compressed model and features saved for web integration.\")\n",
+    "\n",
+    "# Check compressed model size\n",
+    "import os\n",
+    "file_size = os.path.getsize(compressed_model_path) / (1024 * 1024)  # Convert to MB\n",
+    "print(f\"Compressed model file size: {file_size:.2f} MB\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2bc44e68-4f3a-4f80-9cbf-ca4f6a05f4b8",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d9253040-7d87-4617-96f4-def623657b1f",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "99ad2a5d-366a-4632-9c57-f7bb9d2d0ef7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "704f3925-e4db-4ada-b255-45cd019ab6bb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
    "id": "94c018a6-2fdf-45e5-9ec8-879724ecc6cb",
    "metadata": {},
    "outputs": [
